# updatechecker

./: .gitignore  .kilocodeignore  .pre-commit-config.yaml  README.MD  config.json  config.json.example  constants.py  logger.py  main.py  pyproject.toml  requirements.txt  updatechecker.cmd  updatechecker.example.yaml  venv.cmd  venv_module.cmd
.github/workflows/: checks.yml
.run/: cli no-async entry.run.xml  cli no-async.run.xml  cli.run.xml
src/updatechecker/: __main__.py  cli.py  common_tools.py  config.py  constants.py  downloader.py  logger.py  updatechecker.py
src/updatechecker/downloader/: __init__.py  factory.py  github.py  http.py
tests/: conftest.py  test_cli.py  test_common_tools.py  test_config.py  test_downloader.py  test_flatten.py  test_variables.py
updatechecker/: __main__.py  common_tools.py  config.py  constants.py  logger.py
