[project]
name = "updatechecker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "colorlog>=6.9.0",
    "dynaconf>=3.2.6",
    "psutil>=6.1.1",
    "pydantic>=2.10.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
